优化完善 用户主体 + 1